[package]
name = "stampcollect-sfml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.stampcollect]
path = ".."

[dependencies.sf2g]
git = "https://github.com/crumblingstatue/sf2g.git"
default-features = false
features = ["graphics"]
