[package]
name = "stampcollect-sfml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.stampcollect]
path = ".."

[dependencies.sfml]
version = "0.24.0"
default-features = false
features = ["graphics"]
